# gsynth

./: .gitignore  .gitmodules  CMakeLists.txt
include/: main.h  sound.h  synthwindow.h
src/: main.cpp  sound.cpp  synthwindow.cpp
